[package]
name = "radicle-fetch"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Fintan Halpenny <fintan.halpenny@gmail.com>"]
edition = "2021"

[dependencies]
bstr = { version = "1.3" }
either = { version = "0" }
gix-actor = { version = "0.23.0" }
gix-features = { version = "0.31", features = ["progress"] }
gix-hash = { version = "0.11" }
gix-lock = {version = "7.0" }
gix-object = { version = "0.32" }
gix-odb = { version = "0.49" }
gix-pack = { version = "0.39" }
gix-protocol = { version = "0.35", features = ["blocking-client"] }
gix-ref = { version = "0.32" }
gix-transport = { version = "0.33", features = ["blocking-client"] }
gix-traverse = { version = "0.29" }
gix-validate = { version = "0.7" }
log = { version = "0.4.17", features = ["std"] }
nonempty = { version = "0.8.1" }
once_cell = { version = "1.13" }
radicle-git-ext = { version = "0.6.0", features = ["bstr"] }
thiserror = { version = "1" }
versions = { version = "5" }

[dependencies.radicle-crypto]
path = "../radicle-crypto"
features = ["radicle-git-ext"]
