[package]
name = "radicle-fetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = { version = "0" }
gix-hash = { version = "0.11" }
gix-features = { version = "0.29" }
gix-lock = {version = "5.0" }
gix-object = { version = "0.29" }
gix-odb = { version = "0.45" }
gix-pack = { version = "0.35" }
gix-protocol = { version = "0.32", features = ["blocking-client"] }
gix-ref = { version = "0.29" }
gix-transport = { version = "0.31", features = ["blocking-client"] }
log = { version = "0.4.17", features = ["std"] }
nonempty = { version = "0" }
radicle-git-ext = { version = "0" }
thiserror = { version = "1" }

[dependencies.radicle-crypto]
path = "../radicle-crypto"
