[package]
name = "radicle-fetch"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Fintan Halpenny <fintan.halpenny@gmail.com>"]
edition = "2021"

[dependencies]
bstr = { version = "1.3" }
either = { version = "0" }
# gix-actor = { version = "0.23.0" }
# gix-features = { version = "0.31", features = ["progress"] }
# gix-hash = { version = "0.11" }
# gix-odb = { version = "0.49" }
# gix-pack = { version = "0.39" }
# gix-protocol = { version = "0.35", features = ["blocking-client"] }
# gix-transport = { version = "0.33", features = ["blocking-client"] }
gix-actor = { git = "https://github.com/Byron/gitoxide", rev = "95847091dc7e37ae6cafb07d698c27661953d530" }
gix-features = { git = "https://github.com/Byron/gitoxide", rev = "95847091dc7e37ae6cafb07d698c27661953d530", features = ["progress"] }
gix-hash = { git = "https://github.com/Byron/gitoxide", rev = "95847091dc7e37ae6cafb07d698c27661953d530" }
gix-odb = { git = "https://github.com/Byron/gitoxide", rev = "95847091dc7e37ae6cafb07d698c27661953d530" }
gix-pack = { git = "https://github.com/Byron/gitoxide", rev = "95847091dc7e37ae6cafb07d698c27661953d530" }
gix-protocol = { git = "https://github.com/Byron/gitoxide", rev = "95847091dc7e37ae6cafb07d698c27661953d530", features = ["blocking-client"] }
gix-transport = { git = "https://github.com/Byron/gitoxide", rev = "95847091dc7e37ae6cafb07d698c27661953d530", features = ["blocking-client"] }
log = { version = "0.4.17", features = ["std"] }
nonempty = { version = "0.8.1" }
radicle-git-ext = { version = "0.6.0", features = ["bstr"] }
thiserror = { version = "1" }

[dependencies.radicle]
path = "../radicle"
